--- a/src/assets/css/demo.css
+++ b/src/assets/css/demo.css
@@ -15,7 +15,8 @@
 .sebm-google-map-container {
   height: 300px;
 }
-#map{
+
+map {
     position:relative;
     width:100%;
     height: calc(100% - 60px);
