--- a/src/assets/scss/plugins/_jquery.jvectormap.scss
+++ b/src/assets/scss/plugins/_jquery.jvectormap.scss
@@ -19,7 +19,9 @@ svg {
     background: $white-color;
     border: none;
     border-radius: $border-radius-extreme;
-    @include shadow-8dp();
+
+    @include shadow-8dp;
+
     padding: 5px 10px;
     z-index: 1040;
 }
@@ -92,14 +94,14 @@ svg {
 }
 
 .jvectormap-legend-cnt-h .jvectormap-legend {
-    float: left;
+    // float: left;
     margin: 0 10px 10px 0;
     padding: 3px 3px 1px 3px;
 }
 
-.jvectormap-legend-cnt-h .jvectormap-legend .jvectormap-legend-tick {
-    float: left;
-}
+// .jvectormap-legend-cnt-h .jvectormap-legend .jvectormap-legend-tick {
+//     float: left;
+// }
 
 .jvectormap-legend-cnt-v .jvectormap-legend {
     margin: 10px 10px 0 0;
